# Multi-Agent-Ecommerce-Customer-Support-System

./: .env.sample  .gitignore  README.md  ingestion_trigger.py  pyproject.toml  requirements.txt
app/: main.py  utils.py
app/agents/: crew_agents.py  tools.py
app/core/: crewai_llm_adapter.py  llm.py
app/evaluation/: evaluator.py
app/graph/: workflow.py
app/rag/: gemini_embedder.py  ingestion.py  pipeline.py  retriever.py
app/schemas/: io.py
data/policies/: cancellations.txt  disputes.txt  marketplace.txt  promotions.txt  returns_refunds.txt  shipping_delivery.txt
tests/: test_cases.json  test_e2e.py
